unpackaged/objects/User.object
<CustomObject>
    <fields>
        <fullName>AGE_Profile_Quote__c</fullName>
        <description>Quote that appear on AGE Profile page</description>
        <inlineHelpText>Quote that appear on AGE Profile page</inlineHelpText>
        <label>AGE Profile Quote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continuous_Service_Date__c</fullName>
        <description>Continuous service date from Workday.  This represents the start date of Appirio employees as well as acquired employees</description>
        <inlineHelpText>Continuous service date brought over from Workday</inlineHelpText>
        <label>Continuous Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direct_Deposit_Points_Into_Company_Store__c</fullName>
        <defaultValue>true</defaultValue>
        <description>AGE setting that indicates automatic transfer of all available points to the Company Store.</description>
        <inlineHelpText>AGE setting that indicates automatic transfer of all available points to the Company Store.</inlineHelpText>
        <label>Direct Deposit Points Into Company Store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facebook_URL__c</fullName>
        <description>Synced automatically from the corresponding PSA Contact record.  Do not update directly on the User record.</description>
        <inlineHelpText>Synced automatically from the corresponding PSA Contact record.  Do not update directly on the User record.</inlineHelpText>
        <label>Facebook URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <description>First name plus last name.  Formula field.</description>
        <formula>FirstName &amp; &quot; &quot; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First name plus last name.  Formula field.</inlineHelpText>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <description>Synced automatically from the corresponding PSA Contact record.  Do not update directly on the User record.</description>
        <inlineHelpText>Synced automatically from the corresponding PSA Contact record.  Do not update directly on the User record.</inlineHelpText>
        <label>LinkedIn URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Practice__c</fullName>
        <description>Practice listed in PSA for the resource record corresponding to this user.  This field is automatically synchronized from PSA - do not update it directly on the User record.</description>
        <inlineHelpText>Practice listed in PSA for the resource record corresponding to this user.  This field is automatically synchronized from PSA - do not update it directly on the User record.</inlineHelpText>
        <label>Practice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region listed in PSA for the resource record corresponding to this user.  This field is automaticaly synchronized from PSA - do not update it directly on the User record.</description>
        <inlineHelpText>Region listed in PSA for the resource record corresponding to this user.  This field is automaticaly synchronized from PSA - do not update it directly on the User record.</inlineHelpText>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Employee Start Date</description>
        <inlineHelpText>Employee Start Date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Twitter_URL__c</fullName>
        <description>Synced automatically from the corresponding PSA Contact record.  Do not update directly on the User record.</description>
        <inlineHelpText>Synced automatically from the corresponding PSA Contact record.  Do not update directly on the User record.</inlineHelpText>
        <label>Twitter URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WD_Employee_ID__c</fullName>
        <description>This field stores the Employee Id as assigned in Workday.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field stores the Employee Id as assigned in Workday.</inlineHelpText>
        <label>Workday Employee ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>